# html2xhtml

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE-snprintf.txt  Makefile.am  README  README-AUTOTOOLS  README-WINDOWS.TXT  README.md  acinclude.m4  configure.ac  configure.in
charset_coder/: Makefile.am  charsets_gen.py
doc/: Makefile.am  html2xhtml.1
dtdcoder/: DTDCoder.java  DTDDeclHandler.java  Makefile.am  README  XHTMLEntityResolver.java  dtd_index.xml  plantilla1.xhtml  plantilla5.xhtml  plantilla7.xhtml  template-11.xhtml  template-basic10.xhtml  template-basic11.xhtml  template-frameset.xhtml  template-transitional.xhtml
src/: Makefile.am  cgi.c  cgi.h  charset.c  charset.h  charset_aliases.c  charset_aliases.h  dtd.c  dtd.h  dtd_names.c  dtd_names.h  dtd_types.h  dtd_util.c  dtd_util.h  dtdquery.c  html.c  html.l  html2xhtml.c  htmlgr.c  htmlgr.h  htmlgr.y  mensajes.c  mensajes.h  params.c  params.h  procesador.c  procesador.h  snprintf.c  snprintf.h  tree.c  tree.h  xchar.c  xchar.h
src/test_code/: http_listener.c  run_cgi.sh  sample_cgi_request.txt  test_charset.c
tests/: Makefile.am  README  test-att-value-1.html  test-att-value-2.html  test-base-repeated-1.html  test-buffer-overflow.html  test-elm-after-body-1.html  test-elm-after-body-2.html  test-elm-after-body-3.html  test-elm-after-body-4.html  test-elm-after-body-5.html  test-elm-after-html-1.html  test-empty_elm-1.html  test-encoding-10.html  test-encoding-11.html  test-encoding-12.html  test-encoding-13.html  test-encoding-14.html  test-encoding-4.html  test-encoding-6.html  test-encoding-7.html  test-encoding-8.html  test-encoding-9.html  test-encoding-err-input-1.html  test-no_cgi_error-1.html  test-no_cgi_error-2.html  test-params-1.html  test-script-2.html  test-segfault-report-1.html  test-simple-1.html  test-title-repeated-1.html  test-title-repeated-2.html  test-utf8-1.html  test-utf8-count-1.html  test-utf8-count-2.html  test-yy-error-recovery-1.html  test.sh  test_clean.sh  test_diff.sh  test_make_reference.sh
web-api-clients/: README
web-api-clients/curl-bash/: html2xhtml-curl.sh
web-api-clients/node.js/: example.js
web-api-clients/node.js/lib/: html2xhtml.js
web-api-clients/python/: html2xhtml.py
