AC_PREREQ(2.61)

AC_INIT
AC_CONFIG_SRCDIR([configure.in])

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(html2xhtml, 1.1.1)

AC_LANG([C])
AC_PROG_CC
AM_PROG_LIBTOOL
AM_PROG_LEX
AC_PROG_YACC

# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADERS([libintl.h malloc.h stddef.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([strcasecmp strstr])

AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile dtdcoder/Makefile charset_coder/Makefile])
AC_OUTPUT
